tests/negative/test_owning_data_asgn_owning.orb
data Foo {
    x:i32
} (fnc dropFoo (val:Foo::noDrop) () {});

data Bar {
    f0:Foo
    f1:Foo
};

fnc main () () {
    sym b0:Bar b1:Bar;
    = b0 b1;
};